# DtekPortalen

./: .gitignore  .gitmodules  .travis.yml  Application.hs  CalendarFeed.hs  Config.hs  DtekPortalen.cabal  Einstein.hs  Forening.hs  Foundation.hs  Import.hs  LICENSE  Mailman.hs  Model.hs  README.md  Settings.hs  StandardLayout.hs  cabal.config  devel.hs  main.hs
Handler/: About.hs  Admin.hs  Contact.hs  Document.hs  Feed.hs  Forening.hs  Links.hs  Posts.hs  Profile.hs  Root.hs  SmallHandlers.hs
Helpers/: Post.hs  Scraping.hs
Model/: Document.hs  Forening.hs  Persist.hs  Post.hs  User.hs
Scrapers/: CalendarFeed.hs  Einstein.hs
Settings/: StaticFiles.hs
cassius/: default-layout.cassius  footer.cassius  fullpost.cassius  header.cassius  homepage.cassius  standard.cassius
config/: models  postgresql.yml  routes  settings.yml  sqlite.yml
deploy/: Procfile  service.sh
hamlet/: admin.hamlet  boilerplate-layout.hamlet  contact.hamlet  default-layout.hamlet  editpost.hamlet  footer.hamlet  forening.hamlet  header.hamlet  homepage.hamlet  lmenu.hamlet  postslist.hamlet  rmenu.hamlet  standard.hamlet  teasepost.hamlet
shorten-strings/: .gitignore  README.md  shorten-strings.cabal
shorten-strings/Data/: Shorten.hs
src/: Application.hs  Foundation.hs  Model.hs  Settings.hs  StandardLayout.hs  main.hs
src/Handler/: Admin.hs  Feed.hs  Forening.hs  Root.hs
src/Helpers/: Scraping.hs  Shorten.hs
src/Model/: Document.hs  Forening.hs  Persist.hs
src/Scrapers/: CalendarFeed.hs
src/Settings/: StaticFiles.hs
templates/: about.hamlet  admin.hamlet  boilerplate-layout.hamlet  contact.hamlet  default-layout-wrapper.hamlet  default-layout.cassius  footer.cassius  footer.hamlet  forening.hamlet  fullpost.hamlet  header.hamlet  homepage.hamlet  links.hamlet  lmenu.hamlet  manage.hamlet  posts.hamlet  postslist.hamlet  postslist.julius  preview.cassius  preview.hamlet  rmenu.hamlet  snd.hamlet  standard.cassius  teasepost.cassius  teasepost.hamlet
yesod-auth-kerberos/: README.markdown
yesod-auth-kerberos/Yesod/Auth/: Kerberos.hs
yesod-auth-kerberos/examples/: kerberos.hs
