name:              DtekPortalen
version:           0.0.0
license:           BSD3
license-file:      LICENSE
author:            Arash Rouhani
maintainer:        Arash Rouhani
synopsis:          Yesod website for Chalmers D students.
description:       This site is intenteded for use of computer science students
                   at Chalmers University, this site relies on a in-place
                   Kerberos configuration, and a read-by-all mailman mail-lists
category:          Web
stability:         Experimental
cabal-version:     >= 1.6
build-type:        Simple
homepage:          https://github.com/dtekcth/DtekPortalen

data-files: static/blueprint
            static/blueprint/ie.css
            static/blueprint/plugins
            static/blueprint/plugins/buttons
            static/blueprint/plugins/buttons/icons
            static/blueprint/plugins/buttons/icons/cross.png
            static/blueprint/plugins/buttons/icons/key.png
            static/blueprint/plugins/buttons/icons/tick.png
            static/blueprint/plugins/buttons/readme.txt
            static/blueprint/plugins/buttons/screen.css
            static/blueprint/plugins/fancy-type
            static/blueprint/plugins/fancy-type/readme.txt
            static/blueprint/plugins/fancy-type/screen.css
            static/blueprint/plugins/link-icons
            static/blueprint/plugins/link-icons/icons
            static/blueprint/plugins/link-icons/icons/doc.png
            static/blueprint/plugins/link-icons/icons/email.png
            static/blueprint/plugins/link-icons/icons/external.png
            static/blueprint/plugins/link-icons/icons/feed.png
            static/blueprint/plugins/link-icons/icons/im.png
            static/blueprint/plugins/link-icons/icons/lock.png
            static/blueprint/plugins/link-icons/icons/pdf.png
            static/blueprint/plugins/link-icons/icons/visited.png
            static/blueprint/plugins/link-icons/icons/xls.png
            static/blueprint/plugins/link-icons/readme.txt
            static/blueprint/plugins/link-icons/screen.css
            static/blueprint/plugins/rtl
            static/blueprint/plugins/rtl/readme.txt
            static/blueprint/plugins/rtl/screen.css
            static/blueprint/print.css
            static/blueprint/screen.css
            static/blueprint/src
            static/blueprint/src/forms.css
            static/blueprint/src/grid.css
            static/blueprint/src/grid.png
            static/blueprint/src/ie.css
            static/blueprint/src/print.css
            static/blueprint/src/reset.css
            static/blueprint/src/typography.css
            static/combined
            static/combined/8q_Z-N3G.css
            static/css
            static/css/normalize.css
            static/img
            static/img/dteklogo.gif
            static/js
            static/js/modernizr.js


Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    if flag(library-only)
        Buildable: True
    else
        Buildable: False

    exposed-modules: Application
    other-modules:   Foundation
                     Import
                     Model
                     Settings
                     Settings.StaticFiles
                     Settings.Development
                     -- Nonscaffolded sitespecific modules
                     StandardLayout
                     Scrapers.CalendarFeed
                     Helpers.Post
                     Helpers.Scraping
                     Helpers.Shorten
                     -- Model modules
                     Model.Forening
                     Model.Persist
                     Model.Document
                     Model.Post
                     Model.User
                     -- Handler modules
                     Handler.Root
                     Handler.Forening
                     Handler.Posts
                     Handler.Profile
                     Handler.Admin
                     Handler.Document
                     Handler.Feed
                     Handler.SmallHandlers

    ghc-options:   -Wall -threaded -O0
    cpp-options:   -DDEVELOPMENT

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                OverloadedStrings
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                ViewPatterns

executable         DtekPortalen
    if flag(library-only)
        Buildable: False

    if flag(dev)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -threaded -O0
    else
        ghc-options:   -Wall -threaded

    main-is:       main.hs

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                OverloadedStrings
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts

    build-depends: base                          >= 4          && < 5
                 , yesod
                 , yesod-core
                 , yesod-form
                 , yesod-static
                 , yesod-auth
                 , hamlet
                 , data-default-class
                 , clientsession
                 , hjsmin
                 , yaml
                 , yesod-default
                 , persistent
                 , persistent-template
                 , shakespeare
                 , shakespeare-text
                 , blaze-html
                 , blaze-markup
                 , wai-logger
                 , wai-extra
                 , data-default
                 , yesod-default
                 , conduit
                 , monad-logger
                 , fast-logger
                 , warp
                 , persistent-postgresql
                 , template-haskell
                 , text
                 , bytestring
                 , http-client
                 , http-conduit
                 , directory
                 , process
                 , split
                 , tagsoup
                 , time
                 , url
                 , timerep
                 , utf8-string
                 , old-locale
                 , yesod-newsfeed
                 , yesod-auth-kerberos
                 , friendly-time
                 , markdown
                 , yesod-text-markdown
