name:              DtekPortalen
version:           0.0.0
license:           BSD3
license-file:      LICENSE
author:            Arash Rouhani
maintainer:        Arash Rouhani
synopsis:          Yesod website for Chalmers D students.
description:       This site is intenteded for use of computer science students
                   at Chalmers University, this site relies on a in-place
                   Kerberos configuration, and a read-by-all mailman mail-lists
category:          Web
stability:         Experimental
cabal-version:     >= 1.6
build-type:        Simple
homepage:          https://github.com/dtekcth/DtekPortalen

-- $ find static/* -type f
data-files: static/blueprint/ie.css
            static/blueprint/plugins/buttons/icons/cross.png
            static/blueprint/plugins/buttons/icons/key.png
            static/blueprint/plugins/buttons/icons/tick.png
            static/blueprint/plugins/buttons/readme.txt
            static/blueprint/plugins/buttons/screen.css
            static/blueprint/plugins/fancy-type/readme.txt
            static/blueprint/plugins/fancy-type/screen.css
            static/blueprint/plugins/link-icons/icons/doc.png
            static/blueprint/plugins/link-icons/icons/email.png
            static/blueprint/plugins/link-icons/icons/external.png
            static/blueprint/plugins/link-icons/icons/feed.png
            static/blueprint/plugins/link-icons/icons/im.png
            static/blueprint/plugins/link-icons/icons/lock.png
            static/blueprint/plugins/link-icons/icons/pdf.png
            static/blueprint/plugins/link-icons/icons/visited.png
            static/blueprint/plugins/link-icons/icons/xls.png
            static/blueprint/plugins/link-icons/readme.txt
            static/blueprint/plugins/link-icons/screen.css
            static/blueprint/plugins/rtl/readme.txt
            static/blueprint/plugins/rtl/screen.css
            static/blueprint/print.css
            static/blueprint/screen.css
            static/blueprint/src/forms.css
            static/blueprint/src/grid.css
            static/blueprint/src/grid.png
            static/blueprint/src/ie.css
            static/blueprint/src/print.css
            static/blueprint/src/reset.css
            static/blueprint/src/typography.css
            static/css/normalize.css
            static/img/dteklogo.gif
            static/js/modernizr.js
            templates/about.hamlet
            templates/admin.hamlet
            templates/boilerplate-layout.hamlet
            templates/boilerplate-wrapper.hamlet
            templates/contact.hamlet
            templates/default-layout-wrapper.hamlet
            templates/default-layout.cassius
            templates/default-layout.hamlet
            templates/editpost.hamlet
            templates/footer.cassius
            templates/footer.hamlet
            templates/forening.hamlet
            templates/fullpost.cassius
            templates/fullpost.hamlet
            templates/header.cassius
            templates/header.hamlet
            templates/homepage.hamlet
            templates/links.hamlet
            templates/lmenu.hamlet
            templates/manage.hamlet
            templates/posts.hamlet
            templates/postslist.hamlet
            templates/postslist.julius
            templates/preview.cassius
            templates/preview.hamlet
            templates/rmenu.hamlet
            templates/snd.hamlet
            templates/standard.cassius
            templates/standard.hamlet
            templates/teasepost.cassius
            templates/teasepost.hamlet


extra-source-files: deploy/Procfile
                    config/favicon.ico
                    config/models
                    config/postgresql.yml
                    config/routes
                    config/settings.yml
                    config/sqlite.yml


Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    if flag(library-only)
        Buildable: True
    else
        Buildable: False

    hs-source-dirs: src

    exposed-modules: Application
    other-modules:   Foundation
                     Import
                     Model
                     Settings
                     Settings.StaticFiles
                     Settings.Development
                     StandardLayout
                     Scrapers.CalendarFeed
                     Helpers.Post
                     Helpers.Scraping
                     Helpers.Shorten
                     Model.Forening
                     Model.Persist
                     Model.Document
                     Model.Post
                     Model.User
                     Handler.Root
                     Handler.Forening
                     Handler.Posts
                     Handler.Profile
                     Handler.Admin
                     Handler.Document
                     Handler.Feed
                     Handler.SmallHandlers

    ghc-options:   -Wall -threaded -O0
    cpp-options:   -DDEVELOPMENT

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                OverloadedStrings
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                ViewPatterns

executable         DtekPortalen
    if flag(library-only)
        Buildable: False

    if flag(dev)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -threaded -O0
    else
        ghc-options:   -Wall -threaded

    hs-source-dirs: src
    main-is: main.hs

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                OverloadedStrings
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts

    build-depends: base >= 4 && < 5
                 , blaze-html
                 , blaze-markup
                 , bytestring
                 , clientsession
                 , conduit
                 , data-default
                 , data-default-class
                 , directory
                 , fast-logger
                 , friendly-time
                 , hamlet
                 , hjsmin
                 , http-client
                 , http-conduit
                 , markdown
                 , monad-logger
                 , old-locale
                 , persistent
                 , persistent-postgresql
                 , persistent-sqlite
                 , persistent-template
                 , process
                 , shakespeare
                 , shakespeare-text
                 , split
                 , system-filepath
                 , tagsoup
                 , template-haskell
                 , text
                 , time
                 , timerep
                 , url
                 , utf8-string
                 , wai-extra
                 , wai-logger
                 , warp
                 , yaml
                 , yesod
                 , yesod-auth
                 , yesod-auth-kerberos
                 , yesod-core
                 , yesod-default
                 , yesod-default
                 , yesod-form
                 , yesod-newsfeed
                 , yesod-static
                 , yesod-text-markdown
