name:              DtekPortalen
version:           0.0.0
license:           BSD3
license-file:      LICENSE
author:            Arash Rouhani
maintainer:        dHack
synopsis:          Yesod website for Chalmers D students.
description:       This site is intenteded for use of computer science students
                   at Chalmers University, this site relies on a in-place
                   Kerberos configuration, and a read-by-all mailman mail-lists
category:          Web
stability:         Experimental
cabal-version:     >= 1.6
build-type:        Simple
homepage:          https://github.com/dtekcth/DtekPortalen


data-files: static/blueprint/ie.css
            static/blueprint/plugins/buttons/icons/cross.png
            static/blueprint/plugins/buttons/icons/key.png
            static/blueprint/plugins/buttons/icons/tick.png
            static/blueprint/plugins/buttons/readme.txt
            static/blueprint/plugins/buttons/screen.css
            static/blueprint/plugins/fancy-type/readme.txt
            static/blueprint/plugins/fancy-type/screen.css
            static/blueprint/plugins/link-icons/icons/*.png
            static/blueprint/plugins/link-icons/readme.txt
            static/blueprint/plugins/link-icons/screen.css
            static/blueprint/plugins/rtl/readme.txt
            static/blueprint/plugins/rtl/screen.css
            static/blueprint/print.css
            static/blueprint/screen.css
            static/blueprint/src/forms.css
            static/blueprint/src/grid.css
            static/blueprint/src/grid.png
            static/blueprint/src/ie.css
            static/blueprint/src/print.css
            static/blueprint/src/reset.css
            static/blueprint/src/typography.css
            static/css/normalize.css
            static/img/dteklogo.gif
            static/js/modernizr.js
            templates/about.hamlet
            templates/admin.hamlet
            templates/boilerplate-layout.hamlet
            templates/boilerplate-wrapper.hamlet
            templates/contact.hamlet
            templates/default-layout-wrapper.hamlet
            templates/default-layout.cassius
            templates/default-layout.hamlet
            templates/editpost.hamlet
            templates/footer.cassius
            templates/footer.hamlet
            templates/forening.hamlet
            templates/fullpost.cassius
            templates/fullpost.hamlet
            templates/header.cassius
            templates/header.hamlet
            templates/homepage.hamlet
            templates/links.hamlet
            templates/lmenu.hamlet
            templates/manage.hamlet
            templates/posts.hamlet
            templates/postslist.hamlet
            templates/postslist.julius
            templates/preview.cassius
            templates/preview.hamlet
            templates/rmenu.hamlet
            templates/snd.hamlet
            templates/standard.cassius
            templates/standard.hamlet
            templates/teasepost.cassius
            templates/teasepost.hamlet


extra-source-files: deploy/Procfile
                    config/favicon.ico
                    config/models
                    config/postgresql.yml
                    config/routes
                    config/settings.yml
                    config/sqlite.yml

source-repository head
  type:     git
  location: https://github.com/dtekcth/DtekPortalen

flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

executable DtekPortalen
    if flag(dev)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -threaded -O0
    else
        ghc-options:   -Wall -threaded

    hs-source-dirs: src
    main-is: main.hs

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                OverloadedStrings
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts

    build-depends: base >= 4 && < 5
                 , blaze-html
                 , blaze-markup
                 , bytestring
                 , clientsession
                 , conduit
                 , data-default
                 , data-default-class
                 , directory
                 , fast-logger
                 , friendly-time
                 , hamlet
                 , hjsmin
                 , http-client
                 , http-conduit
                 , markdown
                 , monad-logger
                 , old-locale
                 , persistent
                 , persistent-postgresql
                 , persistent-sqlite
                 , persistent-template
                 , process
                 , shakespeare
                 , shakespeare-text
                 , split
                 , system-filepath
                 , tagsoup
                 , template-haskell
                 , text
                 , time
                 , timerep
                 , url
                 , utf8-string
                 , wai-extra
                 , wai-logger
                 , warp
                 , yaml
                 , yesod
                 , yesod-auth
                 , yesod-auth-kerberos
                 , yesod-core
                 , yesod-default
                 , yesod-default
                 , yesod-form
                 , yesod-newsfeed
                 , yesod-static
                 , yesod-text-markdown
